2007-08-25  Moritz  <moritz@g10code.com>

	* poldi-ctrl.c (my_strusage): Handle copyright line.
	Implemented new CLI argument: --serialno-inserted.
	(struct poldi_ctrl_opt): New member: serialno_inserted.
	(enum arg_opt_ids): New: arg_serialno_inserted.
	(ARGPARSE_OPTS arg_opts): Specify arg_serialno_inserted.
	(poldi_ctrl_options_cb): Handle arg_serialno_inserted.
	(serialno_from_inserted_card): New function.
	(cmd_register_card): New variable: use_inserted; use
	serialno_from_inserted_card.
	(cmd_unregister_card): New variables: serialno, use_inserted; use
	serialno_from_inserted_card.
	(cmd_associate):  New variables: serialno,  account, use_inserted;
	use serialno_from_inserted_card().
	(cmd_disassociate): Likewise.  Allow disassociate if serialno AND
	account is given (removed wildcard mechanism with one of these two
	being NULL).

2007-08-17  Moritz  <moritz@g10code.com>

	* poldi-ctrl.c (cmd_test): Call wait_for_card().
	(cmd_dump): Unused variable key_nbits; do not pretend to dump key
	sizes; cleanup.

2007-08-16  Moritz  <moritz@g10code.com>

	* poldi-ctrl.c (cmd_test): Lookup GPG_AGENT_INFO, not
	SCDAEMON_INFO.
	(cmd_dump): Likewise.
	(cmd_set_key): Likewise.

2007-08-10  Moritz  <moritz@euler>

	* poldi-ctrl.c (cmd_test): Call scd_reset.
	(cmd_dump): Likewise.
	(cmd_set_key): Likewise.

2007-06-29  Moritz  <moritz@g10code.com>

	* poldi-ctrl.c: Removed includes: <common/card.h>, <libscd/scd.h>,
	<common/options.h>; new includes: <common/optparse.h>,
	<scd/scd.h>, <scd-support/scd-support.h>.
	(struct poldi_ctrl_opt): Removed members: debug_sc, ctapi_driver,
	pcsc_driver, reader_port, disable_opensc, disable_ccid,
	debug_ccid_driver.
	(enum arg_opt_ids): Removed: arg_ctapi_driver, arg_pcsc_driver,
	arg_reader_port, arg_disable_ccid, arg_disable_opensc,
	arg_debug_ccid_driver, arg_require_card_switch.
	(arg_opts[]): Adjusted to arg_opt_ids changes.
	(poldi_ctrl_options_cb): Likewise.
	(cardinfo_NULL): New variable.